--- a/app/assets/stylesheets/grids_lite/base.css
+++ b/app/assets/stylesheets/grids_lite/base.css
@@ -1,6 +1,3 @@
-body {
-  font-size: 0;
-}
 .gutters {
   margin: 0 -10px;
 }
@@ -14,4 +11,7 @@ body {
 }
 [class*=col-] {
   display: inline-block;
+}
+.columns {
+  font-size: 0;
 }
